# terminal_mints

./: .gitignore  README.md
mints/: Cargo.toml
mints/src/: main.rs
mints/src/anagrams/: mod.rs  utils.rs
mints/src/hangman/: mod.rs
mints/src/hangman/ascii/: 5.txt  6.txt  hangman_ascii.txt
mints/src/minesweeper/: mod.rs  utils.rs
mints/src/wordle/: display.rs  mod.rs
mints/word_lists/: 4H.txt  4M.txt  6E.txt
mints_cli/: Cargo.toml
mints_cli/src/: main.rs
mints_cli/src/anagrams/: anagram.rs  anagram_words.txt  display.rs  mod.rs  utils.rs
mints_cli/src/hangman/: mod.rs
mints_cli/src/hangman/ascii/: 0.txt  1.txt  2.txt  3.txt  4.txt  lose.txt  win.txt
mints_cli/src/minesweeper/: mod.rs  utils.rs
mints_cli/src/wordle/: display.rs  mod.rs
mints_lib/: Cargo.toml
mints_lib/src/: lib.rs
mints_lib/word_lists/: 4E.txt  5E.txt  5H.txt  5M.txt  6H.txt  6M.txt  7E.txt  7H.txt  7M.txt  8E.txt  8H.txt  8M.txt
releases/macos-v0.1.0/: install.sh
releases/windows-v0.1.0/: install-windows.bat
